Bug 90604 - Export as image produces fully transparent image
Summary: Export as image produces fully transparent image
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: Other Linux (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:5.0.0 target:4.4.4
Keywords: bibisected, bisected, regression
: 91146 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-14 08:42 UTC by Maksym
Modified: 2015-12-17 08:53 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
That page should have contained text. (3.72 KB, image/jpeg)
2015-04-14 08:42 UTC, Maksym
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maksym 2015-04-14 08:42:13 UTC
Created attachment 114776 [details]
That page should have contained text.

Whenever I try to Export as image (png, jpeg etc.) document opened in Writer it generates blank image file (i.e. this file contains nothing but white background).

Pls fix the issue.

With best regards,

Maksym
Comment 1 Buovjaga 2015-04-17 17:36:08 UTC
Repro on Linux, but not on Windows.
Works ok with 4.2.0, so regression.

Win 7 Pro 64-bit, Version: 4.4.2.2
Build ID: c4c7d32d0d49397cad38d62472b0bc8acff48dd6
Locale: fi_FI

Ubuntu 14.10 64-bit 
Version: 4.4.2.2
Build ID: 40m0(Build:2)
Locale: en_US

Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Comment 2 Michael 2015-05-17 20:53:59 UTC
I can reproduce this on the master 5.0.0.0+alpha build (May 17), Linux 64bit, source-hash-6aab2eceaa386c14c2283631d3107cab7484f0f8

Exporting as JPEG at DPI 96 or 108 produces a correct JPEG

Exporting as JPEG at DPI 112 or 128 produces a blank white image

Selecting 110, writer crashes without creating a JPEG, and leaves this error message on console:

soffice.bin: /home/vmiklos/git/libreoffice/master/vcl/source/outdev/map.cxx:382: long int ImplLogicToPixel(long int, long int, long int, long int, long int): Assertion `nMapNum == 0 || std::abs(n) < std::numeric_limits<long>::max() / nMapNum / nDPI' failed.
Comment 3 Michael Stahl 2015-05-18 21:46:12 UTC
regression from:

commit 2ce0aededea43231d91a0955fc0676120dcc4f13
Author:     Juan Picca <jumapico@gmail.com>
AuthorDate: Fri Oct 24 11:43:52 2014 -0200
Commit:     David Tardon <dtardon@redhat.com>
CommitDate: Tue Oct 28 17:15:10 2014 +0000

    fdo#81356: use boost::rational internally in Fraction


fixed on master
Comment 4 Commit Notification 2015-05-18 21:46:57 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=21be3257d9d10f0f65c2ae49d7ef3beb81018bfc

tdf#90604: vcl: reduce MapMode precision further to 32 bits...

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-05-20 14:09:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d276993a1b60f66ce4322c29709c0c3907977663&h=libreoffice-4-4

tdf#90604: vcl: reduce MapMode precision further to 32 bits...

It will be available in 4.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2015-05-21 11:10:08 UTC
*** Bug 91146 has been marked as a duplicate of this bug. ***
Comment 7 Robinson Tryon (qubit) 2015-12-17 08:53:07 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]