tdf#90604: vcl: reduce MapMode precision further to 32 bits...

tdf#91195: vcl: reduce MapMode Fraction precision to avoid...
... overlow in ImplMapLogicToPixel.  50 bits is still too much, 44
appears to work for exporting PNG.

DocumentToGraphicRenderer::renderToGraphic() converts a double to
Fraction which is the source of the excess precision.

(cherry picked from commit c8dad7ebb7c1738ae1348f92d67124c165d83f00)

... which mysteriously causes the Export PNG to produce a non-blank
image again.

The cause is probably that DocumentToGraphicRenderer::renderToGraphic()
records a VCL MetaFile, and the ReadFraction/WriteFraction do only
32 bits, while the Fraction interface promises to handle "long".

(regression from 2ce0aededea43231d91a0955fc0676120dcc4f13)

(cherry picked from commit 21be3257d9d10f0f65c2ae49d7ef3beb81018bfc)

vcl: fix the MapMode ctor too to limit precision to 32 bits
(cherry picked from commit 0a9b99787c65e49f08b27566d277eab8306cca54)

Change-Id: Ic4289a3157ea802c17f0bc24db94ea45eabd9728
Reviewed-on: https://gerrit.libreoffice.org/15800
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>